--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,15 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                <a class="navbar-brand" href="/">LOST</a>
+                <a class="navbar-brand" href="/">FOUND</a>
 
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <a class="navbar-brand" href="/">About</a>
+                <a class="navbar-brand" href="/">Guide</a> 
+                <a class="navbar-brand" href="/">Login</a>
 
             </ul>
 
