--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
 
 {% block title %}LostRing{% endblock %}
 {% block page_content %}
-<body>
+<body onload="alert('서비스 준비중입니다.')">
 <div id="map" style="width:100%;height:350px;"></div>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{KAKAO}}"></script>
 <script>
+
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div
     mapOption = {
         center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
