--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% block page_content %}
 <body><!--onload="alert('서비스 준비중입니다.')"-->
 
-             <div id='map' style='width:100%;height:450px;border-radius: 5px;'>
+             <div id='map' style='float: right; width:80%;height:450px;border-radius: 5px;'>
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{KAKAO}}"></script>
 <script>
