--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap/base.html" %}
+{% extends "bootstrap/login.html" %}
 
 {% block title %}LostRing{% endblock %}
 {% block styles %}
