--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "bootstrap/templ.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}LostRing - Login{% endblock %}
