--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "bootstrap/templ.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Reserved - Register{% endblock %}
