template header update

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,10 +1,10 @@
 {% extends "bootstrap/templ.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Reserved - Register{% endblock %}
+{% block title %}LostRing - Register{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div class="page-header" align="left">
     <h1>Register</h1>
 </div>
 <div class="col-md-4">
