--- a/templates/bootstrap/templ.html
+++ b/templates/bootstrap/templ.html
@@ -3,10 +3,10 @@
 <html>
 {% block head %}
 <head>
+    <title>{% block title %}Home - LostRing{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-
-    <title>{% block title %}Home - LostRing{% endblock %}</title>
+    <meta name="naver-site-verification" content="0fd4b722a8419ed4b23bcd733c946b9a00a2b0fb" />
     <meta property="og:type" content="website">
     <meta name="description" content="지도기반 분실물 정보 플랫폼">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
