--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -1,5 +1,6 @@
 {% extends 'bootstrap/templ.html' %}
 {% block header %}
+    {{super()}}
     <header class="masthead text-center text-white" style="padding: 0;padding-bottom: 132px;padding-top: 75px;background: #07689f;">
         <h3>LostnFoundMap</h3>
         <div class="masthead-content">
