--- a/templates/bootstrap/templ.html
+++ b/templates/bootstrap/templ.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-{% block head %}
+{% block meta %}
     <title>{% block title %}Home - LostRing{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -35,7 +35,7 @@
         </div>
     </nav>
 {% endblock %}
-{% block header %}
+{% block header햣 %}
 
         <header class="masthead text-center text-white" style="padding: 0;padding-bottom: 132px;padding-top: 75px;background: #07689f;">
         <div class="masthead-content">
