--- a/static/style.css
+++ b/static/style.css
@@ -1,20 +1,7 @@
-.navbar-inverse {
-    color: white;
-    background-color: #019E91;
-    border-color: lightseagreen;
+#submit{
+    color: #FFFFFC;
+    background: #1e7e34;
 }
-.navbar-inverse .navbar-brand {
-    color: white;
-    font-size: 30px;
-}
-body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-
-    background-color: #236661;
-}
-.navbar-inverse .navbar-nav>li>a {
-    color: whitesmoke;
-    font-size: 20px;
+#div div div.col-md-4 p  a{
+    color: #17a2b8;
 }
