--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -2,6 +2,8 @@
 {% block title %}LostRing - Login{% endblock %}
 
 {% block page_content %}
+    <link rel="stylesheet"
+      href="{{url_for('static', filename='style.css')}}">
 <div class="page-header" align="left">
     <h1>Login</h1>
 </div>
