--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -2,8 +2,9 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}LostRing - Register{% endblock %}
-
 {% block page_content %}
+    <link rel="stylesheet"
+      href="{{url_for('static', filename='style.css')}}">
 <div class="page-header" align="left">
     <h1>Register</h1>
 </div>
