--- a/templates/bootstrap/signin.html
+++ b/templates/bootstrap/signin.html
@@ -2,7 +2,9 @@
 {% block title %}LostRing - Login{% endblock %}
 
 {% block page_content %}
-<div class="page-header" align="left">
+    <link rel="stylesheet"
+          href="{{url_for('static', filename='style.css')}}">
+    <div class="page-header" align="left">
     <h1>Login</h1>
 </div>
     <div class="float-md-right" >
