--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet"
       href="{{url_for('static', filename='style.css')}}">
 <div class="page-header" align="left">
-    <h1>Register</h1>
+    <h1>회원가입</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
