--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet"
       href="{{url_for('static', filename='style.css')}}">
 <div class="page-header" align="left">
-    <h1>Login</h1>
+    <h1>로그인</h1>
 </div>
     <div class="float-md-right" >
         <strong style="font-size: x-large">LostRing</strong> 사용자가 간편하게 분실물을 등록하고,<br>
@@ -16,7 +16,7 @@
     {{ wtf.quick_form(form) }}
      <br>
 
-    <p>New user? <a href="{{ url_for('auth.register') }}">Click here to register</a>.</p>
+    <p>처음이신가요? <a href="{{ url_for('auth.register') }}">회원가입하기</a></p>
 
 </div>
 
