nav menu edited

--- a/templates/bootstrap/mypage.html
+++ b/templates/bootstrap/mypage.html
@@ -1,3 +1,11 @@
 {% extends 'bootstrap/templ.html' %}
 {% block title %}LostRing - Mypage{% endblock %}
 //TODO: mypage design
+{% block page_content %}
+    <div>
+        <div class="float-md-left">분실신고 내역</div>
+        <div class="float-md-right"> 습득신고 내역</div>
+        <br>
+        <div  class="float-md-none">History </div>
+    </div>
+{% endblock %}
