--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -5,7 +5,10 @@
         <div class="masthead-content">
             <div class="container"><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBvK7bvduzsq19lnF2Bq-UwdenaIjVuICo&amp;q=hgu+student+hall&amp;zoom=17" width="80%" height="400"></iframe></div>
         </div>
-        <div class="btn-group" role="group"><button class="btn btn-success" type="button">Lost</button><button class="btn btn-info" type="button">Found</button></div>
+        <div class="btn-group" role="group">
+            <button class="btn btn-success" onclick="javascript:alert('showing lost');" type="button">Lost</button>
+            <button class="btn btn-info" onclick="javascript:alert('showing found');" type="button">Found</button>
+        </div>
     </div>
 
 
