--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'bootstrap/templ.html' %}
+{% extends "bootstrap/templ.html" %}
 {% block title %}LostRing - Login{% endblock %}
 
 {% block page_content %}
