--- a/templates/auth/unconfirmed.html
+++ b/templates/auth/unconfirmed.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
-
-{% block title %}Reserved - Confirm your account{% endblock %}
+{% extends "bootstrap/templ.html" %}
+{% block title %}LostRing - Confirm your account{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
