google search console

--- a/templates/bootstrap/index.html
+++ b/templates/bootstrap/index.html
@@ -10,6 +10,5 @@
             <button class="btn btn-info" onclick="javascript:alert('showing found');" type="button">Found</button>
         </div>
     </div>
-
-
+    <script>javascript:alert('사이트 개발중')</script> <! TODO  개발완료시 제거-->
 {% endblock %}
