--- a/templates/bootstrap/register.html
+++ b/templates/bootstrap/register.html
@@ -5,8 +5,15 @@
 {% block page_content %}
     <link rel="stylesheet"
           href="{{url_for('static', filename='style.css')}}">
-    <div class="container-lg" style="width: 50%; text-align: left">
-    {{ wtf.quick_form(form) }}
+    <div style="display:grid; grid-template-columns: 1fr 1fr;">
+        <div class="container-lg" style="display:grid; width: 50%; text-align: left">
+        {{ wtf.quick_form(form) }}
+        </div>
+        <div class = "container-lg" style="display:block; margin:0 auto;" >
+            <span>지도에서 {% if url_for(request.endpoint) == '/found'  %} 습득 {% else %}분실{% endif %} 위치를 선택해주세요</span>
+            {{ map }}
 
+        </div>
     </div>
+
 {% endblock %}
